# cotorra

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.toml  LICENSE.md  README.md  pyproject.toml
config/: main.yaml
config/model/: llama-32-lite.yaml  llama-32.yaml
recipes/: standard-workflow.md
src/cotorra/: cli.py  extractor.py  loader.py  loss.py  reporter.py  scorer.py  scorer_generative.py  scorer_rep_based.py  trainer.py  tuner.py
