[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "accelerate",
        "datasets",
        "huggingface-hub",
        "numpy",
        "omegaconf",
        "optuna",
        "polars",
        "rich",
        "torch",
        "torchaudio",
        "torchvision",
        "transformers",
        "typer",
        "tqdm",
        "wandb",
    ]
    description = "configurable trainer for generative event models"
    keywords = [
        "model training",
        "generative event models",
        "configurable training",
    ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cotorra"
    optional-dependencies = { generate = [ "quick-sco-re", "sglang" ] }
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.11"
    version = "26.2.0"

    [project.scripts]
        cotorra = "cotorra.cli:main"

    [project.urls]
        Repository = "https://github.com/bbj-lab/cotorra"

[dependency-groups]
    dev = [ "pip>=26.0.1", "ruff>=0.15.4" ]

[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party = [ "cotorra" ]

[build-system]
    build-backend = "uv_build"
    requires      = [ "uv_build>=0.10.6,<1.0.0" ]

[tool.uv]
    index-strategy = "unsafe-best-match"
    no-cache       = true

    [tool.uv.sources]
        quick-sco-re = { git = "https://github.com/lukesolo-ml/SCOPE_REACH_optimized_inference" }
        torch = [
            { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
        ]
        torchvision = [
            { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
        ]

    [[tool.uv.index]]
        explicit = true
        name     = "pytorch-cu128"
        url      = "https://download.pytorch.org/whl/cu128"
